# throttler_service

./: .gitignore  AGENTS.md  Agentic_Development_Transcript.md  CMakeLists.txt  project.md
proto/: throttling_service.proto
src/: main.cc
src/client/: CMakeLists.txt  throttling_client.cc  throttling_client.h
src/client_registry/: CMakeLists.txt  client_registry.cc  client_registry.h
src/resource_manager/: CMakeLists.txt  resource_manager.cc  resource_manager.h
src/server/: CMakeLists.txt  throttling_server.cc  throttling_server.h
src/token_bucket/: CMakeLists.txt  token_bucket.cc  token_bucket.h
tests/: client_registry_test.cc  resource_manager_test.cc  throttling_client_test.cc  throttling_server_test.cc  token_bucket_test.cc
